tests/neg/erased-case-class.scala
// scalac: -language:experimental.erasedDefinitions

case class Foo1(erased x: Int) // error // error
